<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/pName"
                android:id="@+id/textView6"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/productNameUpdate"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginRight="16dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/brandString"
                android:id="@+id/textView8"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/brandUpdate"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginRight="16dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/priceString"
                android:id="@+id/textView10"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/priceUpdate"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginRight="16dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/colorString"
                android:id="@+id/textView12"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/colorUpdate"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginRight="16dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/stockString"
                android:id="@+id/textView14"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/stockUpdate"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginRight="16dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="124dp"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:text="@string/buyString"
                android:id="@+id/buyButton"
                android:layout_marginRight="16dp" />

            <Button
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:text="@string/sellString"
                android:id="@+id/sellButton"
                android:layout_marginLeft="16dp" />
        </LinearLayout>

        <Button
            android:layout_width="288dp"
            android:layout_height="48dp"
            android:text="@string/sellAllString"
            android:id="@+id/sellAllButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />

        <Button
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:text="@string/deleteString"
            android:id="@+id/deleteButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</ScrollView>